# halohome

./: .auto-claude-status  .env.example  .gitignore  CLAUDE.md  FAVICON.md  IMPLEMENTATION_PLAN.md  MIGRATION_MAP_PROGRESS.md  README.md  README_ZIP_IMPORT.md  deploy-functions.sh  generate-favicon.js  import-zip-boundaries.sh  index.html  netlify.toml  package-lock.json  package.json  prices (3).csv  products (3).csv  test-regrid-75201.sh  tsconfig.app.json  tsconfig.json  upload_zips.py  vite.config.ts
.claude/: settings.json
benchmark/: index.html  server.mjs
docs/: APPLY_ZIP_BOUNDARIES_MIGRATION.md  PRICING_MODEL.md  ZIP_BOUNDARY_IMPLEMENTATION.md
public/: _redirects  astrocartography_formulas.md  compass.lottie  globe-flight.lottie  logo.png.bak  manifest.json  sw.js
public/data/: geonames-cities.json
public/wasm/: .gitignore  astro_core.js
scripts/: build-geonames.ts  extract-cities-json.cjs  patch-wasm.mjs  test-rate-limits.ts
src/: App.tsx  index.css  main.tsx
src/astro-core/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
src/astro-core/.cargo/: config.toml
src/astro-core/pkg/: .gitignore  astro_core.js
src/astro-core/pkg/snippets/wasm-bindgen-rayon-38edf6e439f6d70d/src/: workerHelpers.js
src/astro-core/src/: lib.rs  scout.rs
src/components/: AccountMenu.tsx  AuthModal.tsx  BirthDataDialog.tsx  BlogNavbar.tsx  ChartDropdown.tsx  ChartPickerModal.tsx  EncryptionPasswordModal.tsx  ErrorBoundary.tsx  FilterPane.tsx  Footer.tsx  GenderIcon.tsx  IndexPageModals.tsx  InstallBanner.tsx  LazyErrorBoundary.tsx  MapView.tsx  (+19 more)
supabase/: config.toml
(+519 files in other folders)
