[package]
name = "astro-core"
version = "0.1.0"
edition = "2021"
authors = ["AstroCart Team"]
description = "High-performance astrocartography calculations in Rust/WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
# Enable parallel processing with Rayon (requires COOP/COEP headers on host)
parallel = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
vsop87 = "2.1"
chrono = "0.4"
chrono-tz = "0.10"
tzf-rs = "0.4"

# Parallel processing (optional - requires SharedArrayBuffer + COOP/COEP headers)
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
